[package]
name = "bruh_bot"
version = "0.1.0"
authors = ["bruh <bruh>"]
edition = "2018"

[dependencies]
ethers = { version = "0.2.2", features = ["abigen"] }

tokio = { version = "1.9.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

config = "0.11"
dotenv = "0.15"
